three ISF manually and autotuned